adds postgres as a datastore
